sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:4: error: not found: value getNombrValeurs
  val n = getNombrValeurs()
          ^