sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var i = 0
  val n = getNombrValeurs()
  while(i<n-1) {
    if (plusPetit(i+1,i)) {
      echange(i,i+1)
      if(i>0) i -= 1
    }
    else i += 1
  }
}